apps/adguard-home/namespace.yaml
# apps/adguard-home/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network
  labels:
    name: network
